Background FL HTML

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -79,6 +79,7 @@ body
 .navbar
 .navbar .links
 .sidebar
+  background-color $bgColor !important
   background-color var(--bgColor) !important
 
 body
