--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -135,6 +135,9 @@ border-left-color var(--arrowBgColor)
 .arrow.left
   border-right-color var(--arrowBgColor)
 
+.center
+  text-align: center;
+
 // code
 {$contentClass} code
   color var(--lighten20TextColor)
@@ -257,3 +260,7 @@ div[class*='language-'].line-numbers-mode .line-numbers-wrapper
   ::-webkit-scrollbar-thumb
     background-color var(--languageTextColor)
     border-radius 6px
+
+.home-table table
+  width: 100%
+  border: 0 none
