--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -108,7 +108,9 @@ kbd
   background var(--kbdBgColor)
 
 blockquote
+  color $blockquoteTextColor
   color var(--blockquoteTextColor)
+  border-left-color $blockquoteBorderColor
   border-left-color var(--blockquoteBorderColor)
 
 a
