--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -3,6 +3,7 @@ $contentClass = '.theme-default-content'
 $accentColor ?= #FFC800
 
 $textColor ?= #e2e2e2
+$lighten20TextColor ?= lighten($textColor, 20%)
 
 $borderColor ?= #4e4e4e
 
