--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,8 +1,10 @@
 $contentClass = '.theme-default-content'
 
 $accentColor ?= #FFC800
+$darken10AccentColor ?= darken($accentColor, 10%)
 
 $textColor ?= #e2e2e2
+$lighten10TextColor ?= lighten($textColor, 10%)
 $lighten20TextColor ?= lighten($textColor, 20%)
 
 $borderColor ?= #4e4e4e
